--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="confirm_customer">Confirm Customer</string>
     <string name="enter_your_total_money">Enter your total money</string>
     <string name="settings">Settings</string>
-    <string name="account_not_found">Account not found \nPlease try again.</string>
+    <string name="account_not_found">Account not found \nPlease check your account number.</string>
+    <string name="delete_data">Delete Data</string>
+    <string name="check_my_balance">Check my balance</string>
 </resources>
